# ImgRegWithTransformers

./: .devcontainer.json  Dockerfile  environment.yaml  main copy 2.py  main copy.py  preprocessing.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
experiments/: deformable.ipynb  resampling.ipynb
experiments/masks/: exp-01.ipynb  exp-02.ipynb
networks/: deformable.py
requirements/preprocessing/: pyproject.toml  requirements.conda.yml  requirements.txt
