[tool.poetry]
name = "vit-hist-reg"
version = "0.1.0"
description = "Visual Transformers for Multimodal Histopathological Image Registration"
authors = ["Iván Moreno"]
license = "MIT"
readme = "README.md"
# packages = [{include = "vit_hist_reg"}]

[tool.poetry.dependencies]
python = "^3.8"
backcall = "0.2.0"
beautifulsoup4 = "4.9.3"
brotlipy = "0.7.0"
certifi = "2020.12.5"
cffi = "1.14.3"
chardet = "3.0.4"
cryptography = "3.2.1"
decorator = "4.4.2"
filelock = "3.0.12"
glob2 = "0.7"
idna = "2.10"
ipython = "7.21.0"
ipython-genutils = "0.2.0"
jedi = "0.17.0"
jinja2 = "2.11.3"
libarchive-c = "2.9"
markupsafe = "1.1.1"
numpy = "^1.20"
olefile = "0.46"
parso = "0.8.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "8.1.2"
pip = "20.2.4"
pkginfo = "1.7.0"
prompt-toolkit = "3.0.8"
psutil = "5.8.0"
ptyprocess = "0.7.0"
pycosat = "0.6.3"
pycparser = "2.20"
pygments = "2.8.0"
pyopenssl = "19.1.0"
pysocks = "1.7.1"
pytz = "2021.1"
pyyaml = "5.4.1"
requests = "2.24.0"
ruamel-yaml = "0.15.87"
six = "1.15.0"
soupsieve = "2.2"
torch = "1.8.1+cu111"
torchtext = "0.9.1"
torchvision = "0.9.1+cu111"
traitlets = "5.0.5"
urllib3 = "1.25.11"
wcwidth = "0.2.5"
wheel = "0.35.1"
simpleitk = "^2.2.1"
matplotlib = "^3.7.1"
pytorch-lightning = "^1.4.0"

[[tool.poetry.source]]
name = "pytorch cu111"
url = "https://download.pytorch.org/whl/cu111/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
