[tool.poetry]
name = "vit-hist-reg"
version = "0.1.0"
description = "Visual Transformers for Multimodal Histopathological Image Registration"
authors = ["Iván Moreno"]
license = "MIT"
readme = "README.md"
# packages = [{include = "vit_hist_reg"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu111/torchvision-0.9.1%2Bcu111-cp38-cp38-linux_x86_64.whl" }
absl-py = "1.4.0"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
backcall = "0.2.0"
beautifulsoup4 = "4.9.3"
brotlipy = "0.7.0"
cachetools = "5.3.1"
certifi = "2020.12.5"
cffi = "1.14.3"
chardet = "3.0.4"
charset-normalizer = "3.1.0"
contourpy = "1.0.7"
cryptography = "3.2.1"
cycler = "0.11.0"
decorator = "4.4.2"
einops = "0.6.1"
filelock = "3.0.12"
fonttools = "4.39.4"
frozenlist = "1.3.3"
fsspec = "2023.5.0"
glob2 = "0.7"
google-auth = "2.19.1"
google-auth-oauthlib = "1.0.0"
grpcio = "1.54.2"
huggingface-hub = "0.15.1"
idna = "2.10"
imageio = "2.9.0"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
ipython = "7.21.0"
ipython-genutils = "0.2.0"
jedi = "0.17.0"
jinja2 = "2.11.3"
joblib = "1.2.0"
kiwisolver = "1.4.4"
kornia = "0.6.8"
libarchive-c = "2.9"
loguru = "0.7.0"
markdown = "3.4.3"
markupsafe = "1.1.1"
matplotlib = "3.7.1"
multidict = "6.0.4"
networkx = "3.1"
numpy = "1.24.3"
oauthlib = "3.2.2"
olefile = "0.46"
opencv-python = "4.7.0.72"
packaging = "23.1"
pandas = "2.0.2"
parso = "0.8.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "8.1.2"
pkginfo = "1.7.0"
prompt-toolkit = "3.0.8"
protobuf = "3.20.1"
psutil = "5.8.0"
ptyprocess = "0.7.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycosat = "0.6.3"
pycparser = "2.20"
pydeprecate = "0.3.2"
pygments = "2.8.0"
pyopenssl = "19.1.0"
pyparsing = "3.0.9"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytorch-lightning = "1.6.5"
pytz = "2021.1"
pywavelets = "1.4.1"
pyyaml = "5.4.1"
requests = "2.24.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
ruamel-yaml = "0.15.87"
safetensors = "0.3.1"
scikit-image = "0.17.2"
scipy = "1.9.3"
simpleitk = "2.2.1"
six = "1.15.0"
soupsieve = "2.2"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.0"
tifffile = "2023.4.12"
timm = "0.9.2"
torchmetrics = "0.11.4"
torchsummary = "1.5.1"
torchtext = "0.9.1"
tqdm = "4.65.0"
traitlets = "5.0.5"
typing-extensions = "4.6.3"
tzdata = "2023.3"
urllib3 = "1.25.11"
wcwidth = "0.2.5"
werkzeug = "2.1.2"
yacs = "0.1.8"
yarl = "1.9.2"
zipp = "3.15.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
